init repository and understand assigment

--- a/_Sentiment Analysis of IMDB Movie Reviews.ipynb
+++ b/_Sentiment Analysis of IMDB Movie Reviews.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -12,6 +13,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Problem Statement:**\n",
@@ -21,6 +23,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "1424638f5259100af9f9a5c1b05bd23cf5b71e51"
    },
@@ -30,116 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting wordcloud\n",
-      "  Downloading wordcloud-1.7.0-cp37-cp37m-manylinux1_x86_64.whl (364 kB)\n",
-      "\u001b[K     |████████████████████████████████| 364 kB 3.5 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: pillow in /opt/conda/lib/python3.7/site-packages (from wordcloud) (7.1.1)\n",
-      "Requirement already satisfied: numpy>=1.6.1 in /opt/conda/lib/python3.7/site-packages (from wordcloud) (1.18.1)\n",
-      "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.7/site-packages (from wordcloud) (3.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->wordcloud) (2.8.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->wordcloud) (1.2.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->wordcloud) (2.4.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.7/site-packages (from matplotlib->wordcloud) (0.10.0)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil>=2.1->matplotlib->wordcloud) (1.14.0)\n",
-      "Installing collected packages: wordcloud\n",
-      "Successfully installed wordcloud-1.7.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install wordcloud"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting textblob\n",
-      "  Downloading textblob-0.15.3-py2.py3-none-any.whl (636 kB)\n",
-      "\u001b[K     |████████████████████████████████| 636 kB 3.5 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: nltk>=3.1 in /opt/conda/lib/python3.7/site-packages (from textblob) (3.4.4)\n",
-      "Requirement already satisfied: six in /opt/conda/lib/python3.7/site-packages (from nltk>=3.1->textblob) (1.14.0)\n",
-      "Installing collected packages: textblob\n",
-      "Successfully installed textblob-0.15.3\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install textblob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2020-05-23 00:55:51--  https://www.kaggle.com/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews/download/B4DdPfROXEv8OC01BK1Z%2Fversions%2Fwyqgwp87Ph87CPwfRZ2H%2Ffiles%2FIMDB%20Dataset.csv\n",
-      "Resolving www.kaggle.com (www.kaggle.com)... 35.244.233.98\n",
-      "Connecting to www.kaggle.com (www.kaggle.com)|35.244.233.98|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: /account/login?returnUrl=%2Flakshmi25npathi%2Fimdb-dataset-of-50k-movie-reviews%2Fdata [following]\n",
-      "--2020-05-23 00:55:51--  https://www.kaggle.com/account/login?returnUrl=%2Flakshmi25npathi%2Fimdb-dataset-of-50k-movie-reviews%2Fdata\n",
-      "Reusing existing connection to www.kaggle.com:443.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: unspecified [text/html]\n",
-      "Saving to: ‘/home/jupyter/wl_research/wl_research_challenge/dump_path/IMDB Dataset.csv/B4DdPfROXEv8OC01BK1Z%2Fversions%2Fwyqgwp87Ph87CPwfRZ2H%2Ffiles%2FIMDB Dataset.csv’\n",
-      "\n",
-      "B4DdPfROXEv8OC01BK1     [ <=>                ]   9.33K  --.-KB/s    in 0.005s  \n",
-      "\n",
-      "2020-05-23 00:55:51 (1.71 MB/s) - ‘/home/jupyter/wl_research/wl_research_challenge/dump_path/IMDB Dataset.csv/B4DdPfROXEv8OC01BK1Z%2Fversions%2Fwyqgwp87Ph87CPwfRZ2H%2Ffiles%2FIMDB Dataset.csv’ saved [9549]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "! wget https://www.kaggle.com/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews/download/B4DdPfROXEv8OC01BK1Z%2Fversions%2Fwyqgwp87Ph87CPwfRZ2H%2Ffiles%2FIMDB%20Dataset.csv -P /home/jupyter/wl_research/wl_research_challenge/dump_path/\"IMDB Dataset.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd /home/jupyter/wl_research/wl_research_challenge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../input'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-0fec0dadc28c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../input\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilterwarnings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../input'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Load the libraries\n",
     "import numpy as np\n",
@@ -168,20 +67,14 @@
     "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score\n",
     "\n",
     "import os\n",
-    "print(os.listdir(\"/dump_path))\n",
+    "print(os.listdir(\"../input\"))\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "be1b642cce343f7a8f68f8c91f7c50372cdf4381"
    },
@@ -199,13 +92,14 @@
    "outputs": [],
    "source": [
     "#importing the training data\n",
-    "imdb_data=pd.read_csv(\"dump_path/IMDB Dataset.csv\")\n",
+    "imdb_data=pd.read_csv('../input/IMDB Dataset.csv')\n",
     "print(imdb_data.shape)\n",
     "imdb_data.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "1ad3773974351ed9bdf389b2847d7475b36c2295"
    },
@@ -227,6 +121,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "453c3fd238f62ab8f649eb01771817e25bc0c77d"
    },
@@ -248,6 +143,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "We can see that the dataset is balanced."
@@ -255,6 +151,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "f61964573faababe1f7897b77d32815a24954d2f"
    },
@@ -283,6 +180,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "90da29c3b79f46f41d7391a2a116065b616d0fac"
    },
@@ -306,6 +204,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "328b6e5977da3e055ad4b2e11a31e5e12ccf3b16"
    },
@@ -341,6 +240,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "88117b74761d1047924d6d70f76642faa0e706ac"
    },
@@ -367,6 +267,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "3b66eeabd5b7b8c251f8b8ddf331140a64bcd514"
    },
@@ -394,6 +295,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "e83107e4a281d84d7ae42b4e2c8d81b7ece438e4"
    },
@@ -429,6 +331,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "b35e7499291173119ed42287deac6f0cd96516e1"
    },
@@ -460,6 +363,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "d69462bb209a66cff86376dc8481d0c0140d894d"
    },
@@ -491,6 +395,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "1c2a872ffcb6b8076fdbbba641af12081b6022ef"
    },
@@ -522,6 +427,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "52371868f05ff9cf157280c5acf0f5bc71ee176d"
    },
@@ -552,6 +458,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "803e92b25faa738b10928a91de72d177d8dddf85"
    },
@@ -576,6 +483,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "21a80c94fb42e14391c627710c5d796c40aa7dde"
    },
@@ -601,6 +509,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Modelling the dataset**"
@@ -608,6 +517,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "d5e45fdc9d062a5b9b9dd665ffe732776e196953"
    },
@@ -635,6 +545,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "07eb6d52eb32469e3be82e90af636d598a7b7c27"
    },
@@ -660,6 +571,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Accuracy of the model**"
@@ -681,6 +593,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "ac2ec8353acb5e0f548e1e4a590fbe6f34f4a686"
    },
@@ -707,6 +620,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "0d2e5ddcd69ff0fb52f05f17fc74a86e1b5e5b61"
    },
@@ -732,6 +646,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "8fde9753386e3593dc27c4e88e02bdc38462a018"
    },
@@ -759,6 +674,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "e9a7a973591c1d3cabaa1a47c57fa029d3752bab"
    },
@@ -784,6 +700,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Accuracy of the model**"
@@ -805,6 +722,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "b1bd245f50902ad87ca28e48cbce64ec6a16ec5a"
    },
@@ -830,6 +748,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "_uuid": "705fd8ae8bb5e6925852fffc906b6ffd769dbac0"
    },
@@ -855,6 +774,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Multinomial Naive Bayes for bag of words and tfidf features**"
@@ -878,6 +798,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Model performance on test data**"
@@ -899,6 +820,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Accuracy of the model**"
@@ -920,6 +842,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Print the classification report**"
@@ -941,6 +864,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Plot the confusion matrix**"
@@ -962,6 +886,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Let us see positive and negative words by using WordCloud.**"
@@ -969,6 +894,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Word cloud for positive review words**"
@@ -991,6 +917,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Word cloud for negative review words**"
@@ -1013,6 +940,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "source": [
     "**Conclusion:**\n",
@@ -1042,7 +970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
