--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "from src.model import RNN, LSTM, CNN, CNN1d, BERTGRUSentiment, Trainer\n",
-    "from transformers import BertTokenizer, BertModel"
+    "from transformers import BertModel"
    ]
   },
   {
