train all models

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -355,7 +355,7 @@
    "source": [
     "stats = rnn_trainer.train(\n",
     "    max_epochs = 10, # maximun number of epochs\n",
-    "    improving_limit = 2, # If the precision of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
+    "    improving_limit = 2, # If the `eval_metric` of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
     "    eval_metric = \"accuracy_score\", # evaluation metric : 'loss', 'binary_accuracy', 'accuracy_score', 'precision', 'recall', 'f1-score'\n",
     "    dump_id = \"\" # identifier to distinguish models in the serialization folder, is by default equal to the name of the base model\n",
     ")"
@@ -694,7 +694,7 @@
    "source": [
     "stats = lstm_trainer.train(\n",
     "    max_epochs = 10, # maximun number of epochs\n",
-    "    improving_limit = 2, # If the precision of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
+    "    improving_limit = 2, # If the `eval_metric` of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
     "    eval_metric = \"accuracy_score\", # evaluation metric : 'loss', 'binary_accuracy', 'accuracy_score', 'precision', 'recall', 'f1-score'\n",
     "    dump_id = \"\" # identifier to distinguish models in the serialization folder, is by default equal to the name of the base model\n",
     ")"
@@ -1026,7 +1026,7 @@
    "source": [
     "stats = cnn_trainer.train(\n",
     "    max_epochs = 10, # maximun number of epochs\n",
-    "    improving_limit = 2, # If the precision of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
+    "    improving_limit = 2, # If the `eval_metric` of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
     "    eval_metric = \"accuracy_score\", #evaluation metric : 'loss', 'binary_accuracy', 'accuracy_score', 'precision', 'recall', 'f1-score'\n",
     "    dump_id = \"\" # identifier to distinguish models in the serialization folder, is by default equal to the name of the base model\n",
     ")"
@@ -1285,7 +1285,7 @@
    "source": [
     "stats = cnn1d_trainer.train(\n",
     "    max_epochs = 10, # maximun number of epochs\n",
-    "    improving_limit = 2, # If the precision of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
+    "    improving_limit = 2, # If the `eval_metric` of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
     "    eval_metric = \"accuracy_score\", #evaluation metric : 'loss', 'binary_accuracy', 'accuracy_score', 'precision', 'recall', 'f1-score'\n",
     "    dump_id = \"\" # identifier to distinguish models in the serialization folder, is by default equal to the name of the base model\n",
     ")"
@@ -1784,7 +1784,7 @@
    "source": [
     "stats = bertgru_trainer.train(\n",
     "    max_epochs = 1, # maximun number of epochs\n",
-    "    improving_limit = 2, # If the precision of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
+    "    improving_limit = 2, # If the `eval_metric` of the model does not improve during `improving_limit` epoch, we stop training and keep the best model.\n",
     "    eval_metric = \"accuracy_score\", #evaluation metric : 'loss', 'binary_accuracy', 'accuracy_score', 'precision', 'recall', 'f1-score'\n",
     "    dump_id = \"\" # identifier to distinguish models in the serialization folder, is by default equal to the name of the base model\n",
     ")"
@@ -1932,14 +1932,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
